# OTUS_CPP

./: .travis.yml  README.md
1/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  test_version.cpp
2/: CMakeLists.txt  gConstGlobal.h  ip_filter-main.cpp  ip_filter.cpp  ip_filter.h  my_tie.cpp
3_allocator/: log  main.cpp  my_allocator.h
